postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: infrastructure
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: postgres.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trains-postgres
            port:
              number: 5432
